Bug 122038 - Crash with SIGSEGV (sending messages in UTF-7)
Summary: Crash with SIGSEGV (sending messages in UTF-7)
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR crash
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-15 15:54 UTC by EvilZluk
Modified: 2006-05-18 08:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description EvilZluk 2006-02-15 15:54:01 UTC
Version:            (using KDE KDE 3.5.1)
Installed from:    Slackware Packages
Compiler:          gcc (GCC) 3.4.5 
OS:                Linux

When I send messages to channel in unicode (UTF-7 or UCS-2), I get the following crash:
Using host libthread_db library "/lib/tls/libthread_db.so.1".
`system-supplied DSO at 0xffffe000' has disappeared; keeping its symbols.
[Thread debugging using libthread_db enabled]
[New Thread -1241249536 (LWP 12080)]
[KCrash handler]
#5  0x0812a800 in Server::send ()
#6  0x081397d3 in Server::qt_invoke ()
#7  0xb703d4e4 in QObject::activate_signal ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#8  0xb703dc7c in QObject::activate_signal ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#9  0xb737df39 in QTimer::timeout () from /usr/lib/qt/lib/libqt-mt.so.3
#10 0xb705f7bf in QTimer::event () from /usr/lib/qt/lib/libqt-mt.so.3
#11 0xb6fd8f2f in QApplication::internalNotify ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#12 0xb6fd90cc in QApplication::notify () from /usr/lib/qt/lib/libqt-mt.so.3
#13 0xb763e8c5 in KApplication::notify () from /opt/kde/lib/libkdecore.so.4
#14 0xb6fcc48c in QEventLoop::activateTimers ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#15 0xb6f85281 in QEventLoop::processEvents ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#16 0xb6fef691 in QEventLoop::enterLoop () from /usr/lib/qt/lib/libqt-mt.so.3
#17 0xb6fef5e6 in QEventLoop::exec () from /usr/lib/qt/lib/libqt-mt.so.3
#18 0xb6fd808f in QApplication::exec () from /usr/lib/qt/lib/libqt-mt.so.3
#19 0x0813c08d in main ()
Comment 1 EvilZluk 2006-02-15 16:07:55 UTC
I'm sorry, I was mistaken, this bug for Konversation...
Comment 2 Shintaro Matsuoka 2006-05-18 08:17:17 UTC
SVN commit 542059 by shin:

Remove ucs2 and utf7 from the encodings list because they are not supported on IRC.
Thank you for the report.

BUG: 122038

 M  +9 -3      irccharsets.cpp  


--- trunk/extragear/network/konversation/src/irccharsets.cpp #542058:542059
@@ -1,5 +1,5 @@
 // A wrapper for KCharsets
-// Copyright (C) 2004 Shintaro Matsuoka <shin@shoegazed.org>
+// Copyright (C) 2004, 2006 Shintaro Matsuoka <shin@shoegazed.org>
 
 /*
   This program is free software; you can redistribute it and/or modify
@@ -147,9 +147,15 @@
         while ( it != m_descriptiveNames.end() )
         {
             QString encodingName = KGlobal::charsets()->encodingForName( *it );
-            // exclude utf16 and ucs2
-            if ( encodingName == "utf16" || encodingName == "iso-10646-ucs-2" )
+            kdDebug() << encodingName << endl;
+            // exclude encodings which are not supported on IRC
+            if ( encodingName == "iso-10646-ucs-2" ||
+                 encodingName == "ucs2" ||
+                 encodingName == "utf16" ||
+                 encodingName == "utf7" )
+            {
                 it = m_descriptiveNames.remove( it );
+            }
             else
             {
                 m_shortNames.append( encodingName );