Remove ucs2 and utf7 from the encodings list because they are not supported on IRC. Thank you for the report.

BUG: 122038

svn path=/trunk/extragear/network/konversation/; revision=542059